# cdk_example

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
cdk/: cdk_example_stack.py  constants.py
cdk_workshop/: cdk_workshop_stack.py  constants.py
lambda/: contact_us.html  hello.py  index.html  pyproject.toml  utils.py
service/: index.html  user_function.py  user_model.py  utils.py
tests/unit/: test_cdk_example_stack.py
