[tool.poetry]
name = "cdk-workshop"
version = "0.1.0"
description = ""
authors = ["Desiree Pelletier <pelletier.desiree@gmail.com>"]
readme = "README.md"
packages = [{include = "cdk_workshop"}]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.67.0"
constructs = "^10.1.271"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
"aws-cdk.aws-lambda-python-alpha" = "^2.67.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
