[tool.poetry]
name = "cdk-example"
version = "0.1.0"
description = ""
authors = ["Desiree Pelletier <pelletier.desiree@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic = "^1.10.6"
pandas = "^1.5.3"
XlsxWriter = "^3.0.9"


[tool.poetry.dev-dependencies]
# CDK
"aws-cdk.aws-lambda-python-alpha" = "^2.67.0a0"
aws-cdk-lib = "^2.67.0"
constructs = "^10.1.271"
# DEV
pytest = "^7.2.2"
python-dotenv = "^1.0.0"
isort = "*"
boto3 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
cache_dir = "./.cache"
testpaths = [
    "tests",
]
python_files= [
    "tests/*test_*.py",
]


[tool.isort]
atomic = true
py_version = 39
verbose = false
remove_redundant_aliases = true
ensure_newline_before_comments = true
length_sort = true
length_sort_sections = "true"
color_output = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 118
combine_as_imports = true
default_section = "THIRDPARTY"
import_heading_future = "Future Imports"
import_heading_stdlib = "Standard Library Imports"
import_heading_thirdparty = "Third-Party Imports"
import_heading_firstparty = "Project-Level Imports"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
