[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["Desiree Pelletier <pelletier.desiree@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.86"
requests = "^2.28.2"
pydantic = "^1.10.6"
pandas = "^1.5.3"
XlsxWriter = "^3.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
